--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
   "homepage": "https://github.com/rodrigouroz/movie-recommendations#readme",
   "devDependencies": {
     "mocha": "^3.0.2"
+  },
+  "dependencies": {
+    "express": "^4.14.0"
   }
 }
