Prepare the server for heroku

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A simple REST API for getting movie recommendations (practical example for Digital House Javascript course)",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "mocha"
   },
   "repository": {
